# cookiecutter-data-science

./: .gitignore  README.md  cookiecutter.json  install.sh
hooks/: post_gen_project.sh  pre_gen_project.sh
tests/: test_{{ cookiecutter.repo_name }}.py
{{ cookiecutter.repo_name }}/: .dockerignore  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  install_dependencies.sh  mkdocs.yml  mypy.ini  pyproject.toml
{{ cookiecutter.repo_name }}/docs/: index.md  index.rst
{{ cookiecutter.repo_name }}/docs/assets/: extra.css
{{ cookiecutter.repo_name }}/docs/code/: data.md  features.md  models.md  visualization.md
{{ cookiecutter.repo_name }}/docs/logic/: project_setup.md
{{ cookiecutter.repo_name }}/docs/source/: 6_technical_setup_guide.rst
{{ cookiecutter.repo_name }}/docs/source/code/: src.configurations.rst  src.data.rst  src.rst
{{ cookiecutter.repo_name }}/reports/: README.md
{{ cookiecutter.repo_name }}/src/: cli.py
{{ cookiecutter.repo_name }}/tests/: test_data.py  test_features.py  test_models.py  test_visualization.py  test_{{ cookiecutter.repo_name }}.py
