[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.repo_name }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"
python-dotenv = ""
click = ""

[tool.poetry.dev-dependencies]
isort = ""
pytest = ""
black = ""
ipykernel = ""
flake8 = ""
flake8-docstrings = ""
mypy = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 100
atomic = true

[tool.vulture]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*"]
make_whitelist = true
min_confidence = 80
paths = ["{{ cookiecutter.repo_name }}"]
sort_by_size = true
